# marl_f1

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  LICENSE  README.md  baseline.py  main.py  playground.ipynb  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  baseline.py  baseline_agent.py  common.py  control.py
agents/common/: sb3.py
algorithms/: mappo.py
baselines/: __init__.py  single_agent.py
configs/: eval.yaml  single_agent.yml  train.yaml
configs/agent/: sb3.yaml  ss.yaml
configs/algo/: dqn.yaml  ippo.yaml  iql.yaml  maac.yaml  maddpg.yaml  mappo.yaml  ppo.yaml  sac.yaml  td3.yaml
configs/callbacks/: sb3.yaml
configs/env/: multiracing.yaml  racing.yaml  single.yaml
configs/policy/: attn.yaml  cnn.yaml  ctde_attn.yaml  ctde_cnn.yaml  mlp.yaml
configs/reward/: default.yaml
configs/style/: cooperative.yaml  single.yaml
configs/task/: competitive.yaml  cooperative.yaml  single.yaml  teams.yaml
configs/wrappers/: image_stack.yaml
models/: __init__.py  ctde.py  maac.py  maddpg.py  mappo.py  selection_attention_extractor.py
multi_car_racing/: setup.py
multi_car_racing/gym_multi_car_racing/: multi_car_racing.py
notebooks/: eval.ipynb  optimal_rl.ipynb  pid.ipynb  playground.ipynb  sb3.ipynb  ss.ipynb
scripts/: eval.py  optimal.py  playback.py  plots.py  train.py
utils/: run_index.py  sb3.py  update_readme_tree.py
