[project]
name = "marl-f1"
version = "0.1.0"
description = "experiments on cooperative and competitive rl agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d>=2.3.10",
    "gym-multi-car-racing",
    "gymnasium>=1.2.3",
    "hydra-core>=1.3.2",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.92",
    "pygame>=2.6.1",
    "setuptools<81",
    "shapely>=2.1.2",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[tool.uv.workspace]
members = [
    "multi_car_racing",
]

[tool.uv.sources]
gym-multi-car-racing = { workspace = true, editable = true }

[dependency-groups]
dev = [
  "ruff>=0.13.0",
  "pre-commit>=4.3.0",
]

notebook = [
  "ipykernel>=7.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "experiments",
  "notebooks",
  "multi_car_racing/gym_multi_car_racing.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
